Fix off-by-one layout bug in Firefox

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -45,9 +45,10 @@ body {
         line-height: 100%;
         display: inline-block;
         height: 78px;
+        float: left;
 
         li {
-            display: inline;
+            float: left;
             margin: 0;
             a {
                 height: 78px;
